# AnalystComparer

./: .gitignore
AnalystComparer/: Analyst.cpp  Analyst.h  CMakeLists.txt  Comparer.cpp  Comparer.h  Design.vpp.bak_000f  Design.vux  FormattedCell.h  Trade.cpp  Trade.h  output.txt
Examples/FormattedTable/: FormattedCell.cpp
